[gd_scene load_steps=5 format=2]

[ext_resource path="res://content/gadgets/converter/Conversion.gd" type="Script" id=1]
[ext_resource path="res://content/icons/icon_iron.png" type="Texture" id=2]
[ext_resource path="res://content/icons/icon_sand.png" type="Texture" id=3]
[ext_resource path="res://gui/buttons/button_focus_expand_beyond_parent.tres" type="StyleBox" id=4]

[node name="Conversion" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1906.0
margin_bottom = 14.0
text = "level.converter.popup.conversion.convert"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1906.0
margin_bottom = 42.0
custom_constants/separation = 5

[node name="LabelAmount1" type="Label" parent="VBoxContainer/HBoxContainer" groups=["unstyled"]]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = "1"
align = 2

[node name="Res1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 37.0
margin_bottom = 24.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 297.0
margin_bottom = 24.0
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 12.0
margin_top = 5.0
margin_right = 243.0
margin_bottom = 19.0
text = "level.converter.popup.conversion.to"

[node name="LabelAmount2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_top = 5.0
margin_right = 310.0
margin_bottom = 19.0
text = "1"

[node name="Res2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 315.0
margin_right = 339.0
margin_bottom = 24.0
texture = ExtResource( 2 )

[node name="LabelTime" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 1906.0
margin_bottom = 60.0
text = "over 50s"
align = 1

[node name="SelectedPanel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
custom_styles/panel = ExtResource( 4 )

[connection signal="focus_entered" from="." to="." method="_on_Conversion_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Conversion_focus_exited"]
